[metadata]
name = ejbca_client
version = 1.1.2
author = Alexey Matveev
description = Python ejbca client over SOAP api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shizacat/ejbca-client
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ejbca_client
python_requires = >=3.6
install_requires =
    zeep >= 4.1.0
    requests >= 2.28.1
    cryptography >= 41
